// Creating tables

Table roles as R {
  id int [pk, increment]
  name varchar
  description varchar
}

Table people as P {
  id int [pk, increment]
  person_id varchar [unique, not null]
  name varchar [not null]
  lastname varchar [not null]
  mail varchar [not null]
  phone varchar [not null]
}

Table users as U {
  id int [pk, increment]
  id_people int
  id_roles int 
  password varchar [not null]
}

Table companies as C{
  id int [pk, increment]
  nit varchar [unique, not null]
  name varchar [not null]
  
}

Table projects as PJ{
  id int [pk, increment]
  front_proyect_id varchar [not null]
  id_users int
  id_companies int
  id_project_states int
  id_portfolios int
  name varchar [not null]
  longitude varchar [not null]
  latitude varchar
}

Table project_states as S{
  id int [pk, increment]
  name varchar [not null]
}


Table aux_portfolios as APT{
  id int [pk, increment]
  id_clasification int [not null]
  id_type int [not null]
}

Table clasification as CL{
  id int [pk, increment]
  name varchar [not null]
}

Table type as TP{
  id int [pk, increment]
  name varchar [not null]
}

Table portfolios as PT{
  id int [pk, increment]
  name varchar [not null]
  id_aux_portfolios int [not null]
}

Table baselines as BL{
  id int [pk, increment]
  id_projects int
  baseline int [not null]
  start_date date [not null]
  end_date date [not null]
  real_start_date date
} 

Table reports as RP{
  id int [pk, increment]
  id_projects int
  id_baselines int
  state_date date
  planned_time int
  current_time int
  planned_cost int
  current_cost int
  planned_reach int
  current_reach int
  end_variation int
  total_budget_abl int
  total_budget_projected int
  projected_end_date date
  request_made int
  request_accepted int
}

Table achievements as ACH {
  id int [pk, increment]
  achievement varchar
  id_reports int
}

Table difficulties as DFF {
  id int [pk, increment]
  difficulty varchar
  id_reports int
}

Table perspective as CT{
  id int [pk, increment]
  name varchar [not null]
}

Table objectives as OB{
  id int [pk, increment]
  id_perspective int [not null]
  name varchar [not null]
  description varchar [not null]
}

Table objective_indicators as OBIN{
  id int [pk, increment]
  id_objectives int [not null]
  name varchar [not null]
  goal double [not null]
  periodicity varchar [not null]
}

Table initiatives as INT{
  id int [pk, increment]
  id_objectives int [not null]
  name varchar [not null]
  description varchar [not null]
}

Table action_plans as AP{
  id int [pk, increment]
  name varchar [not null]
  description varchar [not null]
  id_initiatives int [not null]
  delivery_date date [not null]
  id_users int [not null]
  id_plan_states int [not null]
}

Table plan_states as PS{
  id int [pk, increment]
  name varchar [not null]
}

Table processes as PCS{
  id int [pk, increment]
  name varchar [not null]
  description varchar [not null]
  efficiency double [not null]
}

Table process_indicators as PCIN{
  id int [pk, increment]
  name varchar [not null]
  objective varchar [not null]
  periodicity varchar [not null]
  in_charge varchar [not null]
  weight double [not null]
  id_processes int [not null]
  id_users   int [not null]
}

Table periodic_records as PR{
  id int [pk, increment]
  id_process_indicators int [not null]
  record_date varchar [not null]
  expected_value int [not null]
  achieved_value int [not null]
}

//References
Ref: P.id - U.id_people
Ref: R.id < U.id_roles
Ref: S.id < PJ.id_project_states
Ref: PT.id < PJ.id_portfolios
Ref: APT.id < PT.id_aux_portfolios
Ref: CL.id < APT.id_clasification
Ref: TP.id < APT.id_type
Ref: C.id < PJ.id_companies
Ref: U.id < PJ.id_users
Ref: PJ.id < BL.id_projects
Ref: PJ.id < RP.id_projects
Ref: BL.id < RP.id_baselines
Ref: CT.id < OB.id_perspective
Ref: OB.id < OBIN.id_objectives
Ref: OB.id < INT.id_objectives
Ref: U.id < AP.id_users
Ref: INT.id < AP.id_initiatives
Ref: PS.id < AP.id_plan_states
Ref: PCS.id < PCIN.id_processes
Ref: PCIN.id < PR.id_process_indicators
Ref: U.id - PCIN.id_users
Ref: RP.id < ACH.id_reports
Ref: RP.id < DFF.id_reports